@@ -2,4 +2,9 @@ module A :
   sig type ('foo, 'bar) t val get_foo : ('foo, 'a) t -> 'foo option end
 - : ('foo, 'a) A.t -> 'foo option = <fun>
 val _bar : ('a, 'b) A.t -> 'a option = <fun>
+- : int = 42
+- : bool = false
+- : string = ""
+- : char = 'd'
+- : float = 42.
 
